--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MONHUN</title>
+    <style>
+      body {
+        background: url("https://wallpaperaccess.com/full/3385860.jpg") center
+          fixed no-repeat;
+        background-size: cover;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
