--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
       body {
         background: url("https://wallpaperaccess.com/full/3385860.jpg") center
           fixed no-repeat;
+        background-blend-mode: color-burn;
         background-size: cover;
       }
     </style>
