--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
       body {
         background: url("https://wallpaperaccess.com/full/3385860.jpg") center
           fixed no-repeat;
+        /* background: url("https://images3.alphacoders.com/112/thumb-1920-112177.jpg")
+          center fixed no-repeat; */
         background-size: cover;
         background-blend-mode: darken;
         margin: 0;
